--- a/hausaufgaben/puanDurumu.html
+++ b/hausaufgaben/puanDurumu.html
@@ -10,15 +10,13 @@
             font-family: Verdana, Geneva, Tahoma, sans-serif;
              width: 400px;
               background-color: bisque;
-              border-style: dotted;
+              border-style: dotted ;
+              text-align: center;
             }
-        th{
+        table>tbody>tr>td{
             border-style: solid;
         }
-        tr{
-            border-style: solid 2px;
-        }
-
+        .sol {text-align: left;}
     </Style>
 </head>
 <body>
@@ -37,7 +35,7 @@
         </thead>
         <tBody>
             <tr>
-                <td>BESIKTAS</td>
+                <td class="sol">BESIKTAS</td>
                 <td>9</td>
                 <td>8</td>
                 <td>0</td>
@@ -48,7 +46,7 @@
             </tr>
 
             <tr>
-                <td>GALATASARAY</td>
+                <td class="sol">GALATASARAY</td>
                 <td>9</td>
                 <td>7</td>
                 <td>1</td>
@@ -58,7 +56,7 @@
                 <td>22</td>
             </tr>
             <tr>
-                <td>BURSASPOR</td>
+                <td class="sol">BURSASPOR</td>
                 <td>9</td>
                 <td>6</td>
                 <td>2</td>
@@ -68,7 +66,7 @@
                 <td>19</td>
             </tr>
             <tr>
-                <td>TRABZONSPOR</td>
+                <td class="sol">TRABZONSPOR</td>
                 <td>9</td>
                 <td>5</td>
                 <td>3</td>
