Update and rename template-kommentiert.html to 01-02 template-kommentiert.html

--- a/Tag 1/01-02 template-kommentiert.html
+++ b/Tag 1/01-02 template-kommentiert.html
@@ -2,13 +2,15 @@
 <html lang="de"><!--Öffnendes HTML Tag mit einem Attribut für die Seitensprache und der Eigenschaft "Deutsch".-->
 <head><!--Öffnendes Head Tag-->
 <meta charset="utf-8"><!--Legt den Zeichensatz utf-8 / Unicode (Umlaute, fremde Zeichen etc.)-->
-<meta name="robots" content="index,follow"><!--Sagt allen Suchmaschinen, daß sie der Seite folgen sollen, in diesem Fall alle Suchmaschinen. Möchte man nur Google ansprechen, schreibt man name="googlebot". Möchte man eine Seite nicht indexiert und gefolgt haben, kann man folgendes schreiben:
+<meta name="robots" content="index,follow"><!--Sagt allen Suchmaschinen, daß sie der Seite folgen sollen, in diesem Fall alle Suchmaschinen. 
+Möchte man nur Google ansprechen, schreibt man name="googlebot". Möchte man eine Seite nicht indexiert und gefolgt haben, kann man folgendes schreiben:
 <meta name="robots" content="noindex,nofollow">
 -->
 <title>Mein Website Template</title>
 <!--Der Titel der Website, zu finden im Browser Tab. Die Ideale Titellänge beträgt zwischen 55 und 65 Zeichen, das Maximum liegt bei 70 Zeichen.-->
 <meta name="description" content="Hier kommt die Beschreibung der jeweiligen Website rein. Optimal sind 150 - 155 Zeichen. Das Maximum liegt 160.">
-<!--Das ist die meta Beschreibung der Webseite. Diese wird mit dem Title in den Google Suchergebnissen augegeben. In diesem Beispiel sind name und content Attribute, description und die Beschreibung sind Eigenschaften.-->
+<!--Das ist die meta Beschreibung der Webseite. Diese wird mit dem Title in den Google Suchergebnissen augegeben. In diesem Beispiel sind name und 
+content Attribute, description und die Beschreibung sind Eigenschaften.-->
 </head><!--Schließendes Head Tag-->
 <body><!--Öffnendes Body Tag (Hier kommt der komplette Inhalt der Website rein)-->
 Das ist der eigentlich Inhalt der Website
